# Camomile

./: .depend  .pre-commit-config.yaml  CHANGES.md  LICENSE.md  Makefile  Makefile.in  README  README.md  camomile-compat.opam  camomile.descr  camomile.opam  camomile.opam.template  camomileBase.opam  configure.ml  dune-project  dune-workspace.dev  jbuild-workspace.dev
Camomile/: COPYING  Changes  META.in  Makefile.in  Makefile.in.godiva  Makefile.mingw  README  Release  camomileDefaultConfig.ml  camomileDynConfig.mli  camomileLibrary.ml  camomileLibrary.mlip  camomileLibrary.mlp  camomileLibraryDefault.ml  camomileLibraryDefault.mli  camomileLibraryDyn.ml  camomileLibraryDyn.mli  camomile_do_not_use.ml  configInt.ml  configInt.mli  configure  configure.in  default.ml  default.mli  dune  jbuild  spec.godiva
Camomile/charmaps/: EBCDIC-PT  IBM1133  ISO_6937  MAC-CYRILLIC  WINDOWS-31J  dune  dune.inc  dune_gen.ml  jbuild  jbuild.inc  jbuild_gen.ml
Camomile/database/: dune  jbuild
Camomile/internal/: avlTree.ml  avlTree.mli  bitsvect.ml  bitsvect.mli  byte_labeled_dag.ml  byte_labeled_dag.mli  bytesvect.ml  bytesvect.mli  charmap.ml  charmap.mli  database.ml  database.mli  dune  hangul.ml  hangul.mli  helpers.ml  helpers.mli  iMap.ml  iMap.mli  iSet.ml  iSet.mli  jbuild  stringPrep_data.ml  stringPrep_data.mli  tbl31.ml  tbl31.mli  uReStrLexer.mll  uReStrParser.mly  uReStrParserType.ml  unidata.ml  unidata.mli  unimap.ml  unimap.mli  xArray.ml  xArray.mli
Camomile/locales/: af.txt  ar_EG.txt  ar_IN.txt  ar_IQ.txt  ar_JO.txt  ar_MA.txt  ar_QA.txt  ar_SA.txt  ar_SD.txt  ar_YE.txt  be_BY.txt  bg.txt  bn.txt  ca_ES_PREEURO.txt  cs_CZ.txt  de.txt  de_AT.txt  de_AT_PREEURO.txt  de_BE.txt  de_CH.txt  de_DE.txt  de_LU.txt  de_LU_PREEURO.txt  de__PHONEBOOK.txt  dune  dune.inc  dune_gen.ml  el_GR_PREEURO.txt  en_AU.txt  en_GU.txt  en_HK.txt  en_IN.txt  en_JM.txt  en_MH.txt  en_NZ.txt  en_TT.txt  eo.txt  es_BO.txt  es_CL.txt  es_EC.txt  (+89 more)
Camomile/mappings/: dune  gen_mappings.ml  jbuild
Camomile/public/: camomileLibrary.mlip  caseMap.ml  caseMap.mli  charEncoding.ml  charEncoding.mli  iSet.ml  jbuild  locale.ml  locale.mli  main.mlp  oOChannel.ml  oOChannel.mli  stringPrep.ml  stringPrep.mli  subText.ml  subText.mli  uCS4.ml  uCS4.mli  uChar.ml  uChar.mli  uCharInfo.ml  uCharInfo.mli  uCharInfoType.ml  uCharTbl.ml  uCharTbl.mli  uCol.ml  uCol.mli  uLine.ml  uLine.mli  uMap.ml  uMap.mli  uNF.ml  uNF.mli  uPervasives.ml  uPervasives.mli  uRe.ml  uRe.mli  uReStr.ml  uReStr.mli  uSet.ml  (+11 more)
Camomile/tools/: camomilecharmap.ml  camomilelocaledef.ml  camomilelocaledef_lexer.ml  camomilelocaledef_lexer.mli  camomilestringprep.ml  camomileunidata.ml  dune  iana.ml  jbuild  parse_age.ml  parse_allkeys.ml  parse_casefolding.ml  parse_scripts.ml  parse_specialcasing.ml  parse_unidata.ml  parse_uniset.ml
Camomile/toolslib/: absCe.ml  absCe.mli  absOrd.ml  absOrd.mli  camomileconfig.ml  colLexer.mll  colParser.mly  dune  jbuild  toolslib.ml
Camomile/unidata/: CompositionExclusions.txt  DerivedAge.txt  NamesList.html  PropList.txt  Scripts.txt  StandardizedVariants.html  USourceData.txt
Camomile/unidata/auxiliary/: GraphemeBreakTest.html  LineBreakTest.html  SentenceBreakTest.html  WordBreakTest.html
Camomile/unidata/stringprep/: b3  c21  c7
camomile-test/tester/: Makefile  dune  jbuild  test-base.cmi  test-base.cmx  test-base.ml  test-base.opt  test-caseMap.cmi  test-caseMap.cmx  test-caseMap.ml  test-caseMap.opt  test-charEncoding.cmi  test-charEncoding.cmx  test-charEncoding.ml  test-charEncoding.opt  test-normalform.cmi  test-normalform.cmx  test-normalform.ml  test-normalform.opt  test-uCol.cmi  test-uCol.cmx  test-uCol.ml  test-uCol.opt  test-uTF8.cmi  test-uTF8.cmx  test-uTF8.ml  test-uTF8.opt  testOOChannel.cmi  testOOChannel.cmx  testOOChannel.ml  testOOChannel.opt  test_base.ml  test_caseMap.ml  test_charEncoding.ml  test_normalform.ml  test_stringprep.cmi  test_stringprep.cmx  test_stringprep.ml  test_stringprep.opt  test_uCol.ml  (+16 more)
src/: .gitignore  camomile.ml  camomileCompat.ml  config.ml  config.mli  configImpl.dune.ml  configImpl.env.ml.in  dune
src/charmaps/: dune  dune.inc  dune_gen.ml
src/database/: dune
src/internal/: bitsvect.ml  byte_labeled_dag.ml  byte_labeled_dag.mli  bytesvect.ml  bytesvect.mli  charmap.ml  charmap.mli  database.ml  database.mli  hangul.ml  hangul.mli  iMap.mli  iSet.mli  stringPrep_data.ml  stringPrep_data.mli  tbl31.ml  unidata.ml  unidata.mli  unimap.ml  unimap.mli  xArray.ml  xArray.mli
src/locales/: af_ZA.txt  am.txt  am_ET.txt  ar.txt  ar_AE.txt  ar_BH.txt  ar_DZ.txt  ar_KW.txt  ar_LB.txt  ar_LY.txt  ar_OM.txt  ar_SY.txt  ar_TN.txt  az.txt  be.txt  bg_BG.txt  bn_IN.txt  ca.txt  ca_ES.txt  cs.txt  da.txt  da_DK.txt  de_DE_PREEURO.txt  de_LI.txt  div.txt  div_MV.txt  dune  dune.inc  dune_gen.ml  el.txt  el_GR.txt  en.txt  en_AS.txt  en_BE.txt  en_BZ.txt  en_CA.txt  en_GB.txt  en_GB_EURO.txt  en_IE.txt  en_IE_PREEURO.txt  (+92 more)
src/mappings/: dune  gen_mappings.ml
src/public/: caseMap.ml  caseMap.mli  charEncoding.ml  charEncoding.mli  locale.ml  oOChannel.ml  oOChannel.mli  stringPrep.ml  stringPrep.mli  uCS4.mli  uChar.mli  uCharInfo.ml  uCharInfo.mli  uCharTbl.ml  uCharTbl.mli  uCol.ml  uCol.mli  uNF.ml  uNF.mli  uRe.mli  uReStr.ml  uReStr.mli  uSet.mli  uTF16.ml  uText.ml  xString.mli
src/tools/: camomilecharmap.ml  camomilelocaledef.ml  camomilelocaledef_lexer.ml  camomilelocaledef_lexer.mli  camomilestringprep.ml  dune  gen_unidata.ml  iana.ml  parse_age.ml  parse_allkeys.ml  parse_casefolding.ml  parse_scripts.ml  parse_specialcasing.ml  parse_unidata.ml  parse_uniset.ml
src/toolslib/: absCe.ml  absCe.mli  absOrd.ml  absOrd.mli  camomileconfig.ml  colLexer.mll  colParser.mly  defaultModules.ml  dune
src/unidata/: DerivedCoreProperties.txt  README  UnicodeData.html
src/unidata/stringprep/: c11
src/unidata/tr10/: README  (+1 more)
test/tester/: dune  testOOChannel.ml  test_base.ml  test_caseMap.ml  test_charEncoding.ml  test_normalform.ml  test_stringprep.ml  test_uCol.ml  test_uTF8.ml  uCS4_test.ml  uReStr_test.ml  uTF16_test.ml
(+1219 files in other folders)
