opam-version: "1.2"
maintainer: "yoriyuki.y@gmail.com"
authors: ["Yoriyuki Yamagata"]
homepage: "https://github.com/yoriyuki/Camomile/wiki"
bug-reports: "https://github.com/yoriyuki/Camomile/issues"
license: "LGPL-2+ with OCaml linking exception"
dev-repo: "https://github.com/yoriyuki/Camomile.git"
build: [
  ["ocaml" "configure.ml" "--share" "%{share}%/camomile"]
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build & >= "1.0+beta7"}
  "cppo" {build}
  "base-bytes"
]
available: [ocaml-version >= "4.02.3"]