opam-version: "1.2"
maintainer: "yoriyuki.y@gmail.com"
authors: ["Yoriyuki Yamagata"]
homepage: "https://github.com/yoriyuki/Camomile/"
bug-reports: "https://github.com/yoriyuki/Camomile/issues"
license: "LGPL-2+ with OCaml linking exception"
dev-repo: "https://github.com/yoriyuki/Camomile.git"
build: [
  ["ocaml" "configure.ml" "--share" "%{share}%/camomile"]
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1.0"}
]
available: [ocaml-version >= "4.02.3"]
