(env
 (dev
  (flags
   (:standard -w -3))))

;; Default config, overridden by the configure.ml script

(rule
 (targets installConfig.ml)
 (mode fallback)
 (action
  (with-stdout-to
   %{targets}
   (echo "let share_dir = \"/usr/share/camomile\""))))

(library
 (name camomileLibrary)
 (public_name camomile.library)
 (wrapped true)
 (libraries
  bigarray
  (re_export camlp-streams)
  camomileDefaultConfig)
 (modules
  :standard
  \
  camomileDefaultConfig
  camomile_do_not_use
  installConfig
  camomileLibraryDyn
  camomileLibraryDefault))

(library
 (name camomileDefaultConfig)
 (public_name camomile.default_config)
 (wrapped true)
 (modules camomileDefaultConfig installConfig))

(library
 (name camomileLibraryDyn)
 (public_name camomile.dyn)
 (wrapped false)
 (libraries camomileLibraryDefault)
 (modules camomileLibraryDyn))

(library
 (name camomileLibraryDefault)
 (public_name camomile.lib_default)
 (modules camomileLibraryDefault)
 (libraries camomileDefaultConfig camomileLibrary))

(library
 (name camomile_yuge)
 (public_name camomile)
 (wrapped false)
 (flags :standard)
 (modules camomile_do_not_use)
 (libraries
  (re_export camomile.library)
  (re_export camomile.default_config)
  (re_export camomile.dyn)
  (re_export camomile.lib_default)))

(include_subdirs unqualified)
