(env
 (dev
  (flags
   (:standard -w -3))))

(generate_sites_module
 (module sites)
 (sites camomile))

(include_subdirs unqualified)

(rule
 (target configImpl.ml)
 (action
  (copy configImpl.%{env:CAMOMILE_CONFIG=dune}.ml %{target})))

(rule
 (target configImpl.env.ml)
 (action
  (write-file
   %{target}
   "\nlet prefix = \"%{env:CAMOMILE_PREFIX=/usr}/share/camomile\"\nlet datadir = Filename.concat prefix \"database\"\nlet localedir = Filename.concat prefix \"locales\"\nlet charmapdir = Filename.concat prefix \"charmaps\"\nlet unimapdir = Filename.concat prefix \"mappings\"\n")))

(rule
  (deps tools/gen_unidata.exe unidata/Scripts.txt)
  (target script_type.ml)
  (action
    (with-stdout-to %{target}
      (run tools/gen_unidata.exe --gen-script-type))))

(library
 (name camomileLib)
 (public_name camomile.lib)
 (libraries dune-site bigarray camlp-streams)
 (modules :standard \ camomile))

(library
 (name camomile)
 (public_name camomile)
 (libraries camomileLib)
 (modules camomile))
