(env
 (dev
  (flags
   (:standard -w -32))))

(include_subdirs no)

(executable (name dune_gen))

(rule
 (deps (glob_files sources/*))
 (targets dune.inc.gen)
 (action (with-stdout-to %{targets}
          (run ./dune_gen.exe sources))))

(copy_files sources/*)

(rule
 (alias dune)
 (deps dune.inc)
 (action (diff dune.inc dune.inc.gen)))

(alias
 (name runtest)
 (deps (alias dune)))

(include dune.inc)
