(include_subdirs no)

(executables
 (names parse_unidata
        parse_uniset
        camomilecharmap
        parse_specialcasing
        parse_casefolding
        parse_scripts
        parse_allkeys
        parse_age
        camomilestringprep)
 (flags -I Camomile :standard)
 (modules :standard \ camomilelocaledef camomilelocaledef_lexer iana)
 (libraries toolslib camomile camomile.library camlp-streams))

(executable
 (name iana)
 (modules iana)
 (libraries camomile str))

(executable
 (name camomilelocaledef)
 (libraries toolslib camomile.library camlp-streams)
 (flags -I Camomile :standard)
 (modules camomilelocaledef camomilelocaledef_lexer))
