(executables
 (names
  testOOChannel
  test_base
  test_caseMap
  test_charEncoding
  test_normalform
  test_uCol
  test_uTF8
  test_stringprep
  uCS4_test
  uReStr_test
  uTF16_test)
 (libraries unix str camomile blender tester_lib))

(alias
 (name runtest)
 (deps testOOChannel.exe)
 (action (run %{deps})))

(alias
 (name runtest)
 (action (run ./test_base.exe)))

(alias
 (name runtest)
 (action (run ./test_caseMap.exe)))

(alias
 (name runtest)
 (deps (glob_files ../data/enc/*))
 (action (run ./test_charEncoding.exe)))

(alias
 (name runtest)
 (deps ../unidata/NormalizationTest.txt
       ../unidata/CollationTest_SHIFTED.txt)
 (action (run ./test_normalform.exe)))

(alias
 (name runtest)
 (deps (glob_files ../unidata/*)
       (glob_files ../data/*))
 (action (run ./test_uCol.exe)))

(alias
 (name runtest)
 (deps test_uTF8.exe)
 (action (run ./test_uTF8.exe)))

(alias
 (name runtest)
 (deps  ../data/stringprep)
 (action (run ./test_stringprep.exe)))

(alias
 (name runtest)
 (action (run ./uCS4_test.exe)))

(alias
 (name runtest)
 (action (run ./uReStr_test.exe)))

(alias
 (name runtest)
 (action (run ./uTF16_test.exe)))
