(env
 (dev
  (flags
   (:standard -w -3-32))))

(executables
 (names
  testOOChannel
  test_base
  test_caseMap
  test_charEncoding
  test_normalform
  test_uCol
  test_uTF8
  test_stringprep
  uCS4_test
  uReStr_test
  uTF16_test)
 (libraries unix str camomile blender tester_lib))

(rule
 (alias runtest)
 (deps testOOChannel.exe)
 (action
  (run %{deps})))

(rule
 (alias runtest)
 (action
  (run ./test_base.exe)))

(rule
 (alias runtest)
 (action
  (run ./test_caseMap.exe)))

(rule
 (alias runtest)
 (deps
  (glob_files ../data/enc/*))
 (action
  (run ./test_charEncoding.exe)))

(rule
 (alias runtest)
 (deps ../unidata/NormalizationTest.txt ../unidata/CollationTest_SHIFTED.txt)
 (action
  (run ./test_normalform.exe)))

(rule
 (alias runtest)
 (deps
  (glob_files ../unidata/*)
  (glob_files ../data/*))
 (action
  (run ./test_uCol.exe)))

(rule
 (alias runtest)
 (deps test_uTF8.exe)
 (action
  (run ./test_uTF8.exe)))

(rule
 (alias runtest)
 (deps ../data/stringprep)
 (action
  (run ./test_stringprep.exe)))

(rule
 (alias runtest)
 (action
  (run ./uCS4_test.exe)))

(rule
 (alias runtest)
 (action
  (run ./uReStr_test.exe)))

(rule
 (alias runtest)
 (action
  (run ./uTF16_test.exe)))
