(include_subdirs no)

(executable
 (name dune_gen))

(rule
 (deps
  (glob_files *.txt))
 (targets dune.inc.gen)
 (action
  (with-stdout-to
   %{targets}
   (run ./dune_gen.exe))))

(rule
 (alias dune)
 (deps dune.inc)
 (action
  (diff dune.inc dune.inc.gen)))

(alias
 (name runtest)
 (deps
  (alias dune)))

(include dune.inc)
